// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id        Int        @id @default(autoincrement())
  email     String     @unique
  password  String
  playlists Playlist[]
}

model Playlist {
  id          Int     @id @default(autoincrement())
  name        String
  description String
  owner       User    @relation(fields: [ownerId], references: [id])
  ownerId     Int
  tracks      Track[]
}

model Track {
  id        Int        @id @default(autoincrement())
  name      String
  playlists Playlist[]
}
